feat: 搜索和关键词高亮

--- a/src/style.scss
+++ b/src/style.scss
@@ -85,3 +85,34 @@ body,
   text-align: center;
   white-space: wrap;
 }
+.search-box {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  & > .search {
+    flex: 1;
+    border-radius: 20px;
+    border: solid 1px #ccc;
+    display: flex;
+    height: 30px;
+    align-items: center;
+    padding: 0 10px;
+  }
+
+  input {
+    flex: 1;
+
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    outline: none;
+  }
+  i {
+    width: 20px;
+    height: 20px;
+  }
+}
+::highlight(search-highlight) {
+  background-color: yellow;
+  color: black;
+}
