--- a/src/style.scss
+++ b/src/style.scss
@@ -17,7 +17,7 @@ body,
 
 * {
   box-sizing: border-box !important;
-  font-family: "Microsoft YaHei", "微软雅黑";
+  font-family: 'Microsoft YaHei', '微软雅黑';
 }
 .more-icon {
   display: inline-block;
@@ -110,7 +110,7 @@ body,
     padding: 0 10px;
   }
 
-  input[type="text"] {
+  input[type='text'] {
     flex: 1;
 
     border: none;
@@ -146,7 +146,7 @@ body,
     background-color: var(--bg);
   }
 }
-input[type="range"] {
+input[type='range'] {
   width: 100%;
 
   background-color: #ccc;
